hard-gists/ff122e8563793bb28f79/run.log
=== Docker Run Log for ff122e8563793bb28f79 ===
Started at: Mi 29. Okt 21:44:47 CET 2025

[2025-10-29 21:44:48] START: Running container for ff122e8563793bb28f79
[2025-10-29 21:44:48] SUCCESS: Container 38de5622601f8011fee36f2c1af71c364dba8e66d3c1f24b0855426b109d870a started for ff122e8563793bb28f79
=== Container logs for ff122e8563793bb28f79 ===
  File "/snippet.py", line 77
    print 'MSProject call'
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ff122e8563793bb28f79 ===
[2025-10-29 21:44:50] INFO: Container 38de5622601f8011fee36f2c1af71c364dba8e66d3c1f24b0855426b109d870a has stopped
